# mousice

./: CMakeLists.txt  README.md
include/: caparezza.h  colors.h  scrape.h  ui.h
src/: caparezza.c  main.c  scrape.c  ui.c
test/SearchUrlToHrefContent/: main  main.c
test/inputToSearchUrl/: main  main.c
test/mp4ToMp3/: main.c
test/playMp4UrlMpv/: main  main.c
test/simpleUi/: main  main.c
